--- a/samples-core/pom.xml
+++ b/samples-core/pom.xml
@@ -63,7 +63,7 @@
 
     <dependencies>
 
-        <!-- Code plugging -->
+        <!-- Code Generation -->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
