--- a/samples-annotation-processing/processing/pom.xml
+++ b/samples-annotation-processing/processing/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>annotation-processing</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>annotation-processing</name>
+    <name>Annotation Processing</name>
 
     <parent>
         <groupId>org.art.samples</groupId>
