--- a/samples-annotation-processing/processor/pom.xml
+++ b/samples-annotation-processing/processor/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>annotation-processor</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>annotation-processor</name>
+    <name>Annotation Processor</name>
 
     <parent>
         <groupId>org.art.samples</groupId>
