Add JMH field setup (via reflection and method/var handle) benchmarks

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>samples-core</module>
         <module>samples-annotation-processing</module>
         <module>samples-jcstress</module>
+        <module>samples-jmh</module>
     </modules>
 
     <properties>
