Add blocking call detection sample

--- a/samples-core/pom.xml
+++ b/samples-core/pom.xml
@@ -132,11 +132,21 @@
             <artifactId>reactive-streams-tck</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.projectreactor.tools</groupId>
+            <artifactId>blockhound</artifactId>
+        </dependency>
+
         <!-- Logging -->
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <!-- Geolocation -->
