--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         <jsoup.version>1.11.2</jsoup.version>
         <log4j-core.version>2.10.0</log4j-core.version>
         <lombok.version>1.18.2</lombok.version>
+        <blockhound.version>1.0.8.RELEASE</blockhound.version>
+        <slf4j-api.version>2.0.7</slf4j-api.version>
     </properties>
 
     <build>
@@ -183,12 +185,24 @@
                 <version>${reactive-streams-tck.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.projectreactor.tools</groupId>
+                <artifactId>blockhound</artifactId>
+                <version>${blockhound.version}</version>
+            </dependency>
+
             <!-- Logging -->
 
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback-classic.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
             </dependency>
 
             <!-- Geolocation -->
