--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <junit-platform-runner.version>1.2.0</junit-platform-runner.version>
         <junit-jupiter-engine.version>5.2.0</junit-jupiter-engine.version>
         <javassist.version>3.24.0-GA</javassist.version>
-        <cglib.version>3.2.8</cglib.version>
+        <cglib.version>3.3.0</cglib.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3.version>3.7</commons-lang3.version>
         <trove4j.version>3.0.3</trove4j.version>
@@ -45,6 +45,7 @@
         <lombok.version>1.18.2</lombok.version>
         <blockhound.version>1.0.8.RELEASE</blockhound.version>
         <slf4j-api.version>2.0.7</slf4j-api.version>
+        <parboiled-java.version>1.4.1</parboiled-java.version>
     </properties>
 
     <build>
@@ -268,6 +269,12 @@
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
                 <version>${cglib.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Byte code manipulation -->
@@ -276,6 +283,14 @@
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
                 <version>${javassist.version}</version>
+            </dependency>
+
+            <!-- MISC -->
+
+            <dependency>
+                <groupId>org.parboiled</groupId>
+                <artifactId>parboiled-java</artifactId>
+                <version>${parboiled-java.version}</version>
             </dependency>
 
             <!-- TDD -->
